--- a/.conkyrc
+++ b/.conkyrc
@@ -1,10 +1,11 @@
 
 conky.config = {
-    lua_load = "/home/m3lk4g/conky/conky_weather/draw_bg.lua",
-    lua_draw_hook_pre = "test",
+    lua_load = "draw_bg.lua",
+    lua_draw_hook_pre = "draw_bg",
     alignment = 'top_right',
     background = false,
     border_width = 1,
+    border_outer_margin = 0,
     cpu_avg_samples = 2,
 	default_color = 'white',
     default_outline_color = 'white',
@@ -15,10 +16,10 @@ conky.config = {
     draw_shades = false,
     use_xft = true,
     font = 'DejaVu Sans Mono:size=12',
-    gap_x = 5,
-    gap_y = 60,
-    minimum_height = 300,
-	minimum_width = 300,
+    gap_x = 50,
+    gap_y = 50,
+    minimum_height = 500,
+	minimum_width = 488,
     net_avg_samples = 2,
     no_buffers = true,
     out_to_console = false,
@@ -27,7 +28,7 @@ conky.config = {
     own_window = true,
     own_window_transparent = true,
     own_window_class = 'override',
-    own_window_argb_visual = true,
+    own_window_argb_visual = false,
     own_window_type = 'desktop',
     double_buffer = true,
     stippled_borders = 0,
@@ -39,7 +40,5 @@ conky.config = {
 }
 
 conky.text = [[
-${color orange}${font Paduk:size=10}WEATHER FORECAST ${hr 2}${color}
-${image /home/m3lk4g/conky/conky_weather/icons/new/Images/new/03n.png -p 0,30 -s 87x60}
-${color orange}${font Paduk:size=20}${offset 100}6°C
+ 
 ]]
